@@ -245,6 +245,62 @@
 
 									[/row]
 
+									[row]
+
+										[column]
+											border = "all"
+											border_size = 5
+											vertical_alignment = "top"
+											horizontal_alignment = "left"
+
+											[label]
+												definition = "default"
+												label = _ "date^Last updated:"
+											[/label]
+
+										[/column]
+
+										[column]
+											border = "all"
+											border_size = 5
+											horizontal_alignment = "left"
+											vertical_alignment = "top"
+
+											[scroll_label]
+												id = "updated"
+												definition = "default"
+											[/scroll_label]
+
+										[/column]
+
+										[column]
+											border = "all"
+											border_size = 5
+											vertical_alignment = "top"
+											horizontal_alignment = "left"
+
+											[label]
+												definition = "default"
+												label = _ "date^First uploaded:"
+											[/label]
+
+										[/column]
+
+										[column]
+											border = "all"
+											border_size = 5
+											vertical_alignment = "top"
+											horizontal_alignment = "left"
+
+											[label]
+												id = "created"
+												definition = "default"
+											[/label]
+
+										[/column]
+
+									[/row]
+
 								[/grid]
 
 							[/column]
