@@ -1,4 +1,6 @@
 Version 1.11.8+dev:
+ * Add-ons client:
+   * Display the first and last upload dates in the Description dialog.
  * Add-ons server:
    * Record the first upload date and time for new add-ons.
    * Removed ancient compatibility code used only for add-ons stored by some
